feat(user): persist OAuth2 authorizations